sites/all/themes/nickandersonart/css/styles/style.css
/* ... */
#block-registration_block-user_login input#edit-mail, #search-block-form input {
    font: italic 12px "Trebuchet MS",Arial,Helvetica,sans-serif;
}
#block-recently_read-product .recenly {
    min-height: 235px;
}
.cat_filter_image img {
    display: block;
    margin: 0 auto;
    opacity: 0.9;
    width: 125px;
}
.cat_filter_image .field-label {
    display: none;
}
.cat_filter_image .field-item {
    display: block;
    margin: 0 auto;
    width: 182px;
}
.bef-select-as-links a, .view_all a{
    display: block;
    text-align: center;
    color: #252525;
    display: block;
    font: 14px/20px 'PT Sans',sans-serif;
    padding: 7px 0 0;
    text-align: center;
    text-transform: uppercase;
    width: 185px;
}

.gaz {
    background: url("../styles/images/enlarge_graphic.png") no-repeat scroll 0 0 transparent;
    display: none;
    height: 74px;
    left: 50%;
    margin: -37px 0 0 -41px;
    opacity: 1 !important;
    position: absolute;
    top: 50%;
    width: 83px;
    cursor: pointer;
}
.erlange:hover img {
    opacity: 0.4;
}
.erlange:hover .gaz {
   display: block;
}
.qaz {
    border-top-color: transparent !important;
}
.model-row div, .field_group_right div {
    background: none repeat scroll 0 0 #FFFFFF;
    border: 1px solid #C3C3C3;
    border-radius: 1px 1px 1px 1px;
    float: left;
    height: 401px;
    overflow: hidden;
    position: relative;
    width: 330px;
}
.field_group_right div {
    border: none;
}

body form{margin: 0}
body #email_signup .form-actions{
    padding: 0;
    margin-top: 0;
    margin-bottom: 0;
    background-color: transparent;
    border-top: none;
    display: block
}
#email_signup .form-actions::before, .form-actions::after {
    display: none!important;
    line-height: 0;
    content: "";
}
#footer_links ul{margin: 0;}
.bef-tree{margin: 0}
#uc-cart-checkout-form fieldset.collapsed {
   /* height: 34px !important;*/
    margin: 0 auto 16px;
}
#uc-cart-checkout-form legend {
    margin-bottom: 0;
}
#quotes-pane input#edit-panes-quotes-quote-button {
    /*display: none;*/
}
/**
*Need to fix! I hide specially for Nick :)
*/
#uc-cart-checkout-form fieldset#quotes-pane .error {
   display: none;
}
#delivery-pane .form-item-panes-delivery-select-address {
    padding: 0 0 0 213px;
}

#complete #step5_left h2 {
    margin: 0;
    width: 522px;
}

#complete #step5_left {
    float: left;
    width: 522px;
}
#complete #order_no {
    color: #4F878F;
    font: 15px/28px 'PT Sans',sans-serif;
    padding: 33px 0 5px;
    text-transform: uppercase;
}

#complete p {
    color: #6E6E6E;
    font: 13px/20px 'PT Sans',sans-serif;
    text-align: justify;
}
#complete #tell_your_friends {
    width: 522px;
    margin-bottom: 10px;
}

#complete #tell_your_friends h5 {
    color: #A6BB4F;
    font: 16px 'PT Sans',sans-serif;
    padding: 17px 0 0;
    text-transform: uppercase;
    width: 522px;
}
#complete .wrp {
    min-width: 960px;
    overflow: hidden;
    width: 100%;
}
#complete .main {
    overflow: visible;
    padding: 9px 0 0;
}
#complete .in {
    margin: 0 auto;
    min-width: 960px;
    width: 960px;
}
#complete .content {
    margin: 0 auto 5px;
    width: 860px;
}
#complete h1 {
    color: #666666;
    font: 34px/42px 'PT Sans',sans-serif;
    height: 42px;
    margin-bottom: 23px;
    margin-top: -13px;
    text-transform: uppercase;
    width: 315px;
}
#complete h2 {
    color: #A6BB4F;
    font: 22px/28px 'PT Sans',sans-serif;
    margin-top: 15px;
    min-height: 28px;
    width: 315px;
}
#complete p {
    color: #6E6E6E;
    font: 13px/20px 'PT Sans',sans-serif;
    text-align: center;
    margin: auto;
}
#complete #user_menu {
    display: block;
    margin: 28px 0 0;
}
#complete #user_menu li a {
    color: #C4D191;
    display: inline-block;
    font: 22px 'PT Sans',sans-serif;
    padding: 0 0 12px;
    text-decoration: underline;
}
#step5_pic {
    float: right;
}
.soc-icon {
    display:block;
    float:left;
    opacity:0.8;
    margin:2px;
}
.soc-icon:hover {
    opacity:1;
}

#soc_links {
    display: block;
    height: 48px;
    margin: 22px 0 0;
}

#soc_links li a {
    display: block;
    float: left;
    height: 48px;
    margin: 0 24px 0 0;
    width: 48px;
}
#soc_links li {
    display: block;
    float: left;
}
.form-actions {
    padding: 0 !important;
}
.prod_page {
    float: right;
    width: 732px;
}
.uc-product-node #content h1 {
    margin-top: -5px;
    color: #666666;
    font: 34px/42px 'PT Sans',sans-serif;
    height: 42px;
    margin-bottom: 23px;
    margin-top: -13px;
    text-transform: uppercase;
    width: auto;
}
.uc-product-node #content h2 {
    margin-top: 10px;
    color: #A6BB4F;
    font: 22px/28px 'PT Sans',sans-serif;
    min-height: 28px;
    width: 315px;
    text-transform: none;
}
.field_group_right {
    float: right;
    margin: 40px 10px 0 0;
    min-height: 200px;
    width: 340px;
}
#sidebar {
    background: url("../styles/images/sb_ttl_bg.png") no-repeat scroll 0 0 #FFFFFF;
    border: 1px solid #CCCCCC;
    border-radius: 11px 11px 11px 11px;
    box-shadow: 5px 5px 18px 0 rgba(0, 0, 0, 0.05);
    float: left;
    margin: 0 0 20px 10px;
    min-height: 680px;
    overflow: hidden;
    width: 185px;
}
.prod_page .group-left fieldset legend {
    display: none;
}
.prod_page .group-left fieldset .form-actions {
    border: none;
}
#block-views--exp-catalog-page.block {
    margin-bottom: 0;
}

#user-login {
    display: block;
    margin: 0 auto;
    width: 245px;
    padding: 0 0 0 41px;
}
#user-login #edit-actions.form-actions {
    background: none;
    border: none;
    margin: 0;
    padding: 0;
}
/* ... */

